--- a/Aks/package.json
+++ b/Aks/package.json
@@ -13,26 +13,37 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^8.2.4",
+    "@angular/cdk": "^8.1.4",
     "@angular/common": "~8.1.2",
     "@angular/compiler": "~8.1.2",
     "@angular/core": "~8.1.2",
     "@angular/fire": "^5.2.1",
     "@angular/forms": "~8.1.2",
+    "@angular/material": "^8.1.4",
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/firebase-messaging": "^5.12.0",
+    "@ionic-native/geolocation": "^5.12.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "angular-ng-autocomplete": "^1.1.14",
     "angularfire2": "^5.2.1",
+    "cordova-plugin-fcm-with-dependecy-updated": "^3.0.0",
     "cordova-plugin-firebase": "^2.0.5",
     "cordova-plugin-firebase-messaging": "^3.0.0",
+    "cordova-plugin-geolocation": "^4.0.2",
+    "cordova-plugin-network-information": "^2.0.2",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-uniquedeviceid": "^1.3.2",
+    "cordova-plugin-x-socialsharing": "^5.4.7",
     "core-js": "^2.5.4",
     "firebase": "^6.4.0",
     "ionic4-auto-complete": "^1.8.0",
+    "ng2-search-filter": "^0.5.1",
     "promise-polyfill": "^8.1.3",
     "rxjs": "^6.5.2",
     "rxjs-compat": "^6.5.2",
@@ -69,7 +80,13 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-firebase": {},
-      "cordova-plugin-firebase-messaging": {}
+      "cordova-plugin-firebase-messaging": {},
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-fcm-with-dependecy-updated": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-uniquedeviceid": {},
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-x-socialsharing": {}
     }
   }
 }
