--- a/Aks/package.json
+++ b/Aks/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/firebase-authentication": "^5.13.0",
     "@ionic-native/firebase-messaging": "^5.12.0",
     "@ionic-native/geolocation": "^5.12.0",
     "@ionic-native/splash-screen": "^5.0.0",
@@ -34,8 +35,10 @@
     "angularfire2": "^5.2.1",
     "cordova-plugin-fcm-with-dependecy-updated": "^3.0.0",
     "cordova-plugin-firebase": "^2.0.5",
+    "cordova-plugin-firebase-authentication": "^3.0.0",
     "cordova-plugin-firebase-messaging": "^3.0.0",
     "cordova-plugin-geolocation": "^4.0.2",
+    "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-uniquedeviceid": "^1.3.2",
@@ -43,7 +46,10 @@
     "core-js": "^2.5.4",
     "firebase": "^6.4.0",
     "ionic4-auto-complete": "^1.8.0",
+    "ng-connection-service": "^1.0.4",
     "ng2-search-filter": "^0.5.1",
+    "ngx-highlight": "0.0.3",
+    "ngx-spinner": "^8.0.3",
     "promise-polyfill": "^8.1.3",
     "rxjs": "^6.5.2",
     "rxjs-compat": "^6.5.2",
@@ -86,7 +92,9 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-uniquedeviceid": {},
       "cordova-plugin-network-information": {},
-      "cordova-plugin-x-socialsharing": {}
+      "cordova-plugin-x-socialsharing": {},
+      "cordova-plugin-nativestorage": {},
+      "cordova-plugin-firebase-authentication": {}
     }
   }
 }
